# focus-time

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  client.rs  config.rs  display.rs  focus.rs  focus_interface.rs  main.rs  notification.rs  notification_interface.rs  sway_ipc_interface.rs  swaync.rs  swaync_interface.rs  timer.rs
