[package]
name = "focus-time"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.20"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
swayipc-async = "2.0.4"

tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
zbus = "5.1.1"
